OO-8002: Login as guest and open course. Redirect to auth catalog if authenticated.